--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <canvas id="textCanvas"></canvas>
 
 <div class="enter-container">
-  <a href="/treidly/logo/index.html" class="enter-link">Check Logos</a>
+  <a href="/Treidly/Logo/index.html" class="enter-link">Check Logos</a>
 </div>
 
 <script>
